<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuw_multi_robot_rviz_plugins</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="markus.bader@tuwien.ac.at">markus</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <depend>yaml_cpp_vendor</depend>
  <depend>rviz2</depend>


  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>pluginlib</depend>

  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  <depend>tuw_multi_robot_msgs</depend>
  
  <!-- Python Samples -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
